<resources>
    <string name="app_name">SpeedNewz</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="content">Content</string>
    <string name="latest">Latest</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="home_fragment">Home Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="content_fragment">Content Fragment</string>
    <string name="latest_fragment">Latest Fragment</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="logout_fragment">Logout Fragment</string>

    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_button">Login</string>
    <string name="guest_button">Guest</string>
    <string name="button_update">Update</string>

    <string name="update_confirmation">"Successfully Updated!"</string>
    <string name="err0r_username_password">"Username or/and password is wrong."</string>


    <string name="link_to_content_button"> Link to Content Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_as_guest">Guest</string>
    action_sign_in_as_guest
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="greetings">Hello</string>
</resources>